spring-microservices-k8s/k8s/old/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: default-http-backend
      port:
        number: 80
  rules:
  - host: microservices-cluster.info
    http:
      paths:
      - path: /employee
        pathType: Prefix
        backend:
          service:
            name: employee
            port:
              number: 8080
      - path: /department
        pathType: Prefix
        backend:
          service:
            name: department
            port:
              number: 8080
      - path: /organization
        pathType: Prefix
        backend:
          service:
            name: organization
            port:
              number: 8080
